Compiladores/TrabFinal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> type_specifier ID SEMI
Rule 5     declaration -> type_specifier ID LBRACK NUM RBRACK SEMI
Rule 6     declaration -> type_specifier ID LPAREN params RPAREN compound_stmt
Rule 7     type_specifier -> INT
Rule 8     type_specifier -> VOID
Rule 9     params -> param_list
Rule 10    params -> VOID
Rule 11    param_list -> param_list COMMA param
Rule 12    param_list -> param
Rule 13    param -> type_specifier ID
Rule 14    param -> type_specifier ID LBRACK RBRACK
Rule 15    compound_stmt -> LBRACE local_declarations statement_list RBRACE
Rule 16    local_declarations -> local_declarations declaration
Rule 17    local_declarations -> empty
Rule 18    statement_list -> statement_list statement
Rule 19    statement_list -> empty
Rule 20    statement -> expression_stmt
Rule 21    statement -> compound_stmt
Rule 22    statement -> selection_stmt
Rule 23    statement -> iteration_stmt
Rule 24    statement -> return_stmt
Rule 25    expression_stmt -> expression SEMI
Rule 26    expression_stmt -> SEMI
Rule 27    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 28    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 29    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 30    return_stmt -> RETURN SEMI
Rule 31    return_stmt -> RETURN expression SEMI
Rule 32    expression -> var ASSIGN expression
Rule 33    expression -> simple_expression
Rule 34    simple_expression -> additive_expression relop additive_expression
Rule 35    simple_expression -> additive_expression
Rule 36    relop -> LE
Rule 37    relop -> LT
Rule 38    relop -> GT
Rule 39    relop -> GE
Rule 40    relop -> EQ
Rule 41    relop -> NE
Rule 42    additive_expression -> additive_expression addop term
Rule 43    additive_expression -> term
Rule 44    addop -> PLUS
Rule 45    addop -> MINUS
Rule 46    term -> term mulop factor
Rule 47    term -> factor
Rule 48    mulop -> TIMES
Rule 49    mulop -> OVER
Rule 50    factor -> LPAREN expression RPAREN
Rule 51    factor -> var
Rule 52    factor -> call
Rule 53    factor -> NUM
Rule 54    call -> ID LPAREN args RPAREN
Rule 55    args -> arg_list
Rule 56    args -> empty
Rule 57    arg_list -> arg_list COMMA expression
Rule 58    arg_list -> expression
Rule 59    var -> ID
Rule 60    var -> ID LBRACK expression RBRACK
Rule 61    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 32
COMMA                : 11 57
ELSE                 : 28
EQ                   : 40
GE                   : 39
GT                   : 38
ID                   : 4 5 6 13 14 54 59 60
IF                   : 27 28
INT                  : 7
LBRACE               : 15
LBRACK               : 5 14 60
LE                   : 36
LPAREN               : 6 27 28 29 50 54
LT                   : 37
MINUS                : 45
NE                   : 41
NUM                  : 5 53
OVER                 : 49
PLUS                 : 44
RBRACE               : 15
RBRACK               : 5 14 60
RETURN               : 30 31
RPAREN               : 6 27 28 29 50 54
SEMI                 : 4 5 25 26 30 31
TIMES                : 48
VOID                 : 8 10
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

additive_expression  : 34 34 35 42
addop                : 42
arg_list             : 55 57
args                 : 54
call                 : 52
compound_stmt        : 6 21
declaration          : 2 3 16
declaration_list     : 1 2
empty                : 17 19 56
expression           : 25 27 28 29 31 32 50 57 58 60
expression_stmt      : 20
factor               : 46 47
iteration_stmt       : 23
local_declarations   : 15 16
mulop                : 46
param                : 11 12
param_list           : 9 11
params               : 6
program              : 0
relop                : 34
return_stmt          : 24
selection_stmt       : 22
simple_expression    : 33
statement            : 18 27 28 28 29
statement_list       : 15 18
term                 : 42 43 46
type_specifier       : 4 5 6 13 14
var                  : 32 51

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . type_specifier ID SEMI
    (5) declaration -> . type_specifier ID LBRACK NUM RBRACK SEMI
    (6) declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (7) type_specifier -> . INT
    (8) type_specifier -> . VOID

    INT             shift and go to state 5
    VOID            shift and go to state 6

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    type_specifier                 shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . type_specifier ID SEMI
    (5) declaration -> . type_specifier ID LBRACK NUM RBRACK SEMI
    (6) declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (7) type_specifier -> . INT
    (8) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 5
    VOID            shift and go to state 6

    declaration                    shift and go to state 7
    type_specifier                 shift and go to state 4

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> type_specifier . ID SEMI
    (5) declaration -> type_specifier . ID LBRACK NUM RBRACK SEMI
    (6) declaration -> type_specifier . ID LPAREN params RPAREN compound_stmt

    ID              shift and go to state 8


state 5

    (7) type_specifier -> INT .

    ID              reduce using rule 7 (type_specifier -> INT .)


state 6

    (8) type_specifier -> VOID .

    ID              reduce using rule 8 (type_specifier -> VOID .)


state 7

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 8

    (4) declaration -> type_specifier ID . SEMI
    (5) declaration -> type_specifier ID . LBRACK NUM RBRACK SEMI
    (6) declaration -> type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMI            shift and go to state 9
    LBRACK          shift and go to state 10
    LPAREN          shift and go to state 11


state 9

    (4) declaration -> type_specifier ID SEMI .

    INT             reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    VOID            reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    $end            reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    RBRACE          reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    SEMI            reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    LBRACE          reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    IF              reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    WHILE           reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    RETURN          reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    ID              reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    LPAREN          reduce using rule 4 (declaration -> type_specifier ID SEMI .)
    NUM             reduce using rule 4 (declaration -> type_specifier ID SEMI .)


state 10

    (5) declaration -> type_specifier ID LBRACK . NUM RBRACK SEMI

    NUM             shift and go to state 12


state 11

    (6) declaration -> type_specifier ID LPAREN . params RPAREN compound_stmt
    (9) params -> . param_list
    (10) params -> . VOID
    (11) param_list -> . param_list COMMA param
    (12) param_list -> . param
    (13) param -> . type_specifier ID
    (14) param -> . type_specifier ID LBRACK RBRACK
    (7) type_specifier -> . INT
    (8) type_specifier -> . VOID

    VOID            shift and go to state 16
    INT             shift and go to state 5

    type_specifier                 shift and go to state 13
    params                         shift and go to state 14
    param_list                     shift and go to state 15
    param                          shift and go to state 17

state 12

    (5) declaration -> type_specifier ID LBRACK NUM . RBRACK SEMI

    RBRACK          shift and go to state 18


state 13

    (13) param -> type_specifier . ID
    (14) param -> type_specifier . ID LBRACK RBRACK

    ID              shift and go to state 19


state 14

    (6) declaration -> type_specifier ID LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 20


state 15

    (9) params -> param_list .
    (11) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 9 (params -> param_list .)
    COMMA           shift and go to state 21


state 16

    (10) params -> VOID .
    (8) type_specifier -> VOID .

    RPAREN          reduce using rule 10 (params -> VOID .)
    ID              reduce using rule 8 (type_specifier -> VOID .)


state 17

    (12) param_list -> param .

    COMMA           reduce using rule 12 (param_list -> param .)
    RPAREN          reduce using rule 12 (param_list -> param .)


state 18

    (5) declaration -> type_specifier ID LBRACK NUM RBRACK . SEMI

    SEMI            shift and go to state 22


state 19

    (13) param -> type_specifier ID .
    (14) param -> type_specifier ID . LBRACK RBRACK

    COMMA           reduce using rule 13 (param -> type_specifier ID .)
    RPAREN          reduce using rule 13 (param -> type_specifier ID .)
    LBRACK          shift and go to state 23


state 20

    (6) declaration -> type_specifier ID LPAREN params RPAREN . compound_stmt
    (15) compound_stmt -> . LBRACE local_declarations statement_list RBRACE

    LBRACE          shift and go to state 25

    compound_stmt                  shift and go to state 24

state 21

    (11) param_list -> param_list COMMA . param
    (13) param -> . type_specifier ID
    (14) param -> . type_specifier ID LBRACK RBRACK
    (7) type_specifier -> . INT
    (8) type_specifier -> . VOID

    INT             shift and go to state 5
    VOID            shift and go to state 6

    param                          shift and go to state 26
    type_specifier                 shift and go to state 13

state 22

    (5) declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .

    INT             reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    VOID            reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    $end            reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    RBRACE          reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    SEMI            reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    LBRACE          reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    IF              reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    WHILE           reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    RETURN          reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    ID              reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    LPAREN          reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)
    NUM             reduce using rule 5 (declaration -> type_specifier ID LBRACK NUM RBRACK SEMI .)


state 23

    (14) param -> type_specifier ID LBRACK . RBRACK

    RBRACK          shift and go to state 27


state 24

    (6) declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .

    INT             reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    VOID            reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    $end            reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    RBRACE          reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    SEMI            reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    LBRACE          reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    IF              reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    WHILE           reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    RETURN          reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    ID              reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    LPAREN          reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    NUM             reduce using rule 6 (declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)


state 25

    (15) compound_stmt -> LBRACE . local_declarations statement_list RBRACE
    (16) local_declarations -> . local_declarations declaration
    (17) local_declarations -> . empty
    (61) empty -> .

    INT             reduce using rule 61 (empty -> .)
    VOID            reduce using rule 61 (empty -> .)
    RBRACE          reduce using rule 61 (empty -> .)
    SEMI            reduce using rule 61 (empty -> .)
    LBRACE          reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    ID              reduce using rule 61 (empty -> .)
    LPAREN          reduce using rule 61 (empty -> .)
    NUM             reduce using rule 61 (empty -> .)

    local_declarations             shift and go to state 28
    empty                          shift and go to state 29

state 26

    (11) param_list -> param_list COMMA param .

    COMMA           reduce using rule 11 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 11 (param_list -> param_list COMMA param .)


state 27

    (14) param -> type_specifier ID LBRACK RBRACK .

    COMMA           reduce using rule 14 (param -> type_specifier ID LBRACK RBRACK .)
    RPAREN          reduce using rule 14 (param -> type_specifier ID LBRACK RBRACK .)


state 28

    (15) compound_stmt -> LBRACE local_declarations . statement_list RBRACE
    (16) local_declarations -> local_declarations . declaration
    (18) statement_list -> . statement_list statement
    (19) statement_list -> . empty
    (4) declaration -> . type_specifier ID SEMI
    (5) declaration -> . type_specifier ID LBRACK NUM RBRACK SEMI
    (6) declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (61) empty -> .
    (7) type_specifier -> . INT
    (8) type_specifier -> . VOID

    RBRACE          reduce using rule 61 (empty -> .)
    SEMI            reduce using rule 61 (empty -> .)
    LBRACE          reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    ID              reduce using rule 61 (empty -> .)
    LPAREN          reduce using rule 61 (empty -> .)
    NUM             reduce using rule 61 (empty -> .)
    INT             shift and go to state 5
    VOID            shift and go to state 6

    statement_list                 shift and go to state 30
    declaration                    shift and go to state 31
    empty                          shift and go to state 32
    type_specifier                 shift and go to state 4

state 29

    (17) local_declarations -> empty .

    INT             reduce using rule 17 (local_declarations -> empty .)
    VOID            reduce using rule 17 (local_declarations -> empty .)
    RBRACE          reduce using rule 17 (local_declarations -> empty .)
    SEMI            reduce using rule 17 (local_declarations -> empty .)
    LBRACE          reduce using rule 17 (local_declarations -> empty .)
    IF              reduce using rule 17 (local_declarations -> empty .)
    WHILE           reduce using rule 17 (local_declarations -> empty .)
    RETURN          reduce using rule 17 (local_declarations -> empty .)
    ID              reduce using rule 17 (local_declarations -> empty .)
    LPAREN          reduce using rule 17 (local_declarations -> empty .)
    NUM             reduce using rule 17 (local_declarations -> empty .)


state 30

    (15) compound_stmt -> LBRACE local_declarations statement_list . RBRACE
    (18) statement_list -> statement_list . statement
    (20) statement -> . expression_stmt
    (21) statement -> . compound_stmt
    (22) statement -> . selection_stmt
    (23) statement -> . iteration_stmt
    (24) statement -> . return_stmt
    (25) expression_stmt -> . expression SEMI
    (26) expression_stmt -> . SEMI
    (15) compound_stmt -> . LBRACE local_declarations statement_list RBRACE
    (27) selection_stmt -> . IF LPAREN expression RPAREN statement
    (28) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (29) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (30) return_stmt -> . RETURN SEMI
    (31) return_stmt -> . RETURN expression SEMI
    (32) expression -> . var ASSIGN expression
    (33) expression -> . simple_expression
    (59) var -> . ID
    (60) var -> . ID LBRACK expression RBRACK
    (34) simple_expression -> . additive_expression relop additive_expression
    (35) simple_expression -> . additive_expression
    (42) additive_expression -> . additive_expression addop term
    (43) additive_expression -> . term
    (46) term -> . term mulop factor
    (47) term -> . factor
    (50) factor -> . LPAREN expression RPAREN
    (51) factor -> . var
    (52) factor -> . call
    (53) factor -> . NUM
    (54) call -> . ID LPAREN args RPAREN

    RBRACE          shift and go to state 33
    SEMI            shift and go to state 41
    LBRACE          shift and go to state 25
    IF              shift and go to state 42
    WHILE           shift and go to state 44
    RETURN          shift and go to state 45
    ID              shift and go to state 48
    LPAREN          shift and go to state 43
    NUM             shift and go to state 53

    statement                      shift and go to state 34
    expression_stmt                shift and go to state 35
    compound_stmt                  shift and go to state 36
    selection_stmt                 shift and go to state 37
    iteration_stmt                 shift and go to state 38
    return_stmt                    shift and go to state 39
    expression                     shift and go to state 40
    var                            shift and go to state 46
    simple_expression              shift and go to state 47
    additive_expression            shift and go to state 49
    term                           shift and go to state 50
    factor                         shift and go to state 51
    call                           shift and go to state 52

state 31

    (16) local_declarations -> local_declarations declaration .

    INT             reduce using rule 16 (local_declarations -> local_declarations declaration .)
    VOID            reduce using rule 16 (local_declarations -> local_declarations declaration .)
    RBRACE          reduce using rule 16 (local_declarations -> local_declarations declaration .)
    SEMI            reduce using rule 16 (local_declarations -> local_declarations declaration .)
    LBRACE          reduce using rule 16 (local_declarations -> local_declarations declaration .)
    IF              reduce using rule 16 (local_declarations -> local_declarations declaration .)
    WHILE           reduce using rule 16 (local_declarations -> local_declarations declaration .)
    RETURN          reduce using rule 16 (local_declarations -> local_declarations declaration .)
    ID              reduce using rule 16 (local_declarations -> local_declarations declaration .)
    LPAREN          reduce using rule 16 (local_declarations -> local_declarations declaration .)
    NUM             reduce using rule 16 (local_declarations -> local_declarations declaration .)


state 32

    (19) statement_list -> empty .

    RBRACE          reduce using rule 19 (statement_list -> empty .)
    SEMI            reduce using rule 19 (statement_list -> empty .)
    LBRACE          reduce using rule 19 (statement_list -> empty .)
    IF              reduce using rule 19 (statement_list -> empty .)
    WHILE           reduce using rule 19 (statement_list -> empty .)
    RETURN          reduce using rule 19 (statement_list -> empty .)
    ID              reduce using rule 19 (statement_list -> empty .)
    LPAREN          reduce using rule 19 (statement_list -> empty .)
    NUM             reduce using rule 19 (statement_list -> empty .)


state 33

    (15) compound_stmt -> LBRACE local_declarations statement_list RBRACE .

    INT             reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    VOID            reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    $end            reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    RBRACE          reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    SEMI            reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    LBRACE          reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    IF              reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    WHILE           reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    RETURN          reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    ID              reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    LPAREN          reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    NUM             reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)
    ELSE            reduce using rule 15 (compound_stmt -> LBRACE local_declarations statement_list RBRACE .)


state 34

    (18) statement_list -> statement_list statement .
